--- a/style.css
+++ b/style.css
@@ -1,1 +1,27 @@
 
+body{
+
+    background-color: darkred;
+    
+    }
+    
+    header{
+    display: flex;
+    background-color: magenta;
+    justify-content: space-between;
+    padding: 20px;
+    }
+    
+    .cabecalho_menuitem{
+    
+    display: inline;
+    text-transform: uppercase;
+    margin-left: 20px;
+    }
+    
+    .cabecalho_imagem{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    }
+    
